<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myoffersapp.SecondaryDashboard"
    tools:showIn="@layout/activity_secondary_dashboard">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline28"
        app:layout_constraintRight_toLeftOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/first_coupon_250" />

    <com.myoffersapp.ui.AppTextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/str_clain_firsrt_offer_descr"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />


    <com.myoffersapp.ui.AppButton
        android:id="@+id/btnFreeCoupon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"

        android:layout_marginRight="0dp"

        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Free Coupon"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintLeft_toLeftOf="@+id/guideline28"
        app:layout_constraintRight_toLeftOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/first_bill_250" />

    <com.myoffersapp.ui.AppTextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"

        android:text="@string/str_first_bill_offer_descr"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
        android:textColor="@color/colorPrimary"

        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <com.myoffersapp.ui.AppButton
        android:id="@+id/btnOffers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="View Offers"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="7dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="@+id/guideline28"
        app:layout_constraintRight_toLeftOf="@+id/guideline29"
        app:layout_constraintTop_toBottomOf="@+id/btnOffers"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/refer_250" />

    <com.myoffersapp.ui.AppTextView
        android:id="@+id/textView8"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/str_referral_offer_descr2"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline27"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        android:layout_marginRight="24dp" />

    <com.myoffersapp.ui.AppButton
        android:id="@+id/btnRefer"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="Refer"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline18"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.384" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69722223" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline30"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />
</android.support.constraint.ConstraintLayout>
